// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithLimit /> by default matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 chCKLd"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 ilMIhk text-input-with-limit__FocusTextInput-ufrmmb-0 bILKXf"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 dIACjQ"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 chCKLd"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 ilMIhk text-input-with-limit__FocusTextInput-ufrmmb-0 bILKXf"
    defaultValue=""
    disabled={true}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 dpgsPp"
    disabled={true}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`error\` prop matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 chCKLd"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 qldNZ text-input-with-limit__FocusTextInput-ufrmmb-0 leevUC"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 dIACjQ"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`tiny\` prop matches with snapshot 1`] = `
<div
  className="text-input-with-limit__StyledTextInputWithLimit-ufrmmb-1 chCKLd"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 bXbHeB text-input-with-limit__FocusTextInput-ufrmmb-0 bILKXf"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="text-input-with-limit__StyledCounter-ufrmmb-2 dIACjQ"
    disabled={false}
  >
    80
  </div>
</div>
`;
